Design:fix  navigation z-index

--- a/src/components/commons/nav/nav.module.scss
+++ b/src/components/commons/nav/nav.module.scss
@@ -1,11 +1,12 @@
 .navWrapper {
+  z-index: 9999;
   position: fixed;
   width: 100dvw;
 }
 
 .navContainer {
   position: relative;
-  z-index: 9999;
+  z-index: 9998;
   width: 100%;
   height: 80px;
   display: flex;
